@@ -1,3 +1,8 @@
+2014-06-06 Riccardo Mottola <rm@gnu.org>
+
+	* DBSoap.m
+	Rewrote query parser to match generic aggregate functions, not just count.
+
 2014-06-05 Riccardo Mottola <rm@gnu.org>
 
 	* DBCSVWriter.m
